[workspace]
members = [
    "crates/oicana_world",
    "crates/oicana_files",
    "crates/oicana_input",
    "crates/oicana_template",
    "crates/oicana_testing",
    "crates/oicana_export",
    "integrations/browser/oicana_browser_wasm",
    "integrations/csharp/oicana_csharp",
    "integrations/rust/oicana",
    "tools/test_compare",
    "tools/oicana_cli",
]
default-members = ["tools/oicana_cli"]
resolver = "2"


[workspace.package]
version = "0.1.0-alpha.1"
# also change in ci.yml
rust-version = "1.88"
authors = ["Oicana <hello@oicana.com>"]
edition = "2021"
homepage = "https://oicana.com"
repository = "https://github.com/oicana/oicana"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["oicana", "typst", "typesetting", "pdf"]
categories = ["template-engine"]

[workspace.dependencies]
oicana_world = { version = "0.1.0-alpha.1", path = "crates/oicana_world" }
oicana_files = { version = "0.1.0-alpha.1", path = "crates/oicana_files" }
oicana_input = { version = "0.1.0-alpha.1", path = "crates/oicana_input" }
oicana_export = { version = "0.1.0-alpha.1", path = "crates/oicana_export" }
oicana_template = { version = "0.1.0-alpha.1", path = "crates/oicana_template" }
oicana_testing = { version = "0.1.0-alpha.1", path = "crates/oicana_testing" }
oicana = { version = "0.1.0-alpha.1", path = "integrations/rust/oicana" }

typst = { version = "0.13.0" }
typst-pdf = { version = "0.13.0" }
typst-render = { version = "0.13.0" }
typst-svg = { version = "0.13.0" }
typst-utils = { version = "0.13.0" }
typst-kit = { version = "0.13.0" }
typst-assets = { version = "0.13.0" }

# typst = { git = "https://github.com/typst/typst", rev = "9665eecdb62ee94cd9fcf4dfc61e2c70ba9391fb"}
# typst-pdf = { git = "https://github.com/typst/typst", rev = "9665eecdb62ee94cd9fcf4dfc61e2c70ba9391fb" }
# typst-render = { git = "https://github.com/typst/typst", rev = "9665eecdb62ee94cd9fcf4dfc61e2c70ba9391fb" }
# typst-svg = { git = "https://github.com/typst/typst", rev = "9665eecdb62ee94cd9fcf4dfc61e2c70ba9391fb" }
# typst-utils = { git = "https://github.com/typst/typst", rev = "9665eecdb62ee94cd9fcf4dfc61e2c70ba9391fb" }
# typst-kit = { git = "https://github.com/typst/typst", rev = "9665eecdb62ee94cd9fcf4dfc61e2c70ba9391fb" }
# typst-assets = { git = "https://github.com/typst/typst-assets", rev = "8cccef9" }

comemo = { version = "0.4.0" }

wasm-bindgen = { version = "0.2.101" }
serde-wasm-bindgen = { version = "0.6.5" }
console_error_panic_hook = "0.1.7"
toml = "0.8.12"
chrono = "0.4.37"
serde = { version = "1.0.197" }
ecow = { version = "0.2", features = ["serde"] }
log = "0.4.21"
env_logger = "0.11.5"
console_log = { version = "1.0.0" }
js-sys = { version = "0.3" }
dashmap = { version = "6.0.1", features = ["inline"] }
anyhow = "1"
once_cell = "1.19.0"
zip = { version = "3.0.0", default-features = false, features = [
    "zstd",
] }
dirs = { version = "5.0.1" }
flate2 = { version = "1" }
native-tls = { version = "0.2" }
codespan-reporting = { version = "0.11" }
termcolor = { version = "1" }
tar = { version = "0.4" }
interoptopus = "0.14.5"
interoptopus_backend_csharp = "0.14.5"
serde_json = "1.0.115"
rayon = "1.10.0"
thiserror = "2.0"
getrandom = { version = "0.2", default-features = false }
clap = { version = "4.5.16" }
clap-verbosity = { version = "2.1.0" }
unicode-ident = "1.0.12"
walkdir = "2.5.0"
tempfile = "3.13.0"
color-print = "0.3.7"
png = "0.17.16" # from typst-render
indicatif = "0.18.0"
console = { version = "0.16", default-features = false, features = ["ansi-parsing", "std"] }
openssl = "0.10.72"
image = "0.25.8"

[workspace.lints.rust]
missing_docs = "warn"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
lto = "fat"

[profile.release.package."oicana_cli"]
strip = true

[profile.release.package."test_compare"]
strip = true
