[package]
name = "oicana_export"
description = "Helpers to export a compiled document."
keywords = { workspace = true }
categories = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[features]
default = ["pdf", "svg", "png"]
png = ["dep:typst-render", "dep:png"]
pdf = ["dep:typst-pdf"]
svg = ["dep:typst-svg"]

[dependencies]
oicana_world = { workspace = true }

typst-render = { workspace = true, optional = true }
typst-pdf = { workspace = true, optional = true }
typst-svg = { workspace = true, optional = true }
typst = { workspace = true }

png = { workspace = true, optional = true }
