[package]
name = "oicana_files"
description = "File abstractions for Typst templates."
keywords = { workspace = true }
categories = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[features]
native = ["dep:typst-kit", "dep:termcolor", "dep:dirs", "dep:flate2", "dep:once_cell", "dep:codespan-reporting", "dep:tar", "dep:native-tls"]

[dependencies]
typst = { workspace = true }
typst-kit = { workspace = true, optional = true }
typst-utils = { workspace = true }

zip = { workspace = true, default-features = false, features = ["zstd"] }

dirs = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
codespan-reporting = { workspace = true, optional = true }
termcolor = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
log = { workspace = true }

native-tls = { workspace = true, optional = true }

[dev-dependencies]
toml = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
