[package]
name = "oicana_input"
description = "Types for Oicana template inputs."
keywords = { workspace = true }
categories = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]
typst = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
