[package]
name = "oicana_testing"
description = "Testing for Oicana templates."
keywords = { workspace = true }
categories = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]
oicana_input = { workspace = true }
oicana_export = { workspace = true }
oicana_files = { workspace = true }
oicana_world = { workspace = true }
oicana_template = { workspace = true }
oicana = { workspace = true, features = ["native"] }

serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
log = { workspace = true }
image = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
