[package]
name = "oicana_world"
description = "Typst World for Oicana templates."
keywords = { workspace = true }
categories = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]
oicana_files = { workspace = true }
oicana_input = { workspace = true }
oicana_template = { workspace = true }

typst = { workspace = true }
typst-assets = { workspace = true, features = ["fonts"] }

comemo = { workspace = true }

serde_json = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
ecow = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
codespan-reporting = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# js feature seems to be needed to compile to `wasm32-unknown-unknown` and `jsonschema` stopped setting it for us
getrandom = { workspace = true, features = ["js"] }
js-sys = { workspace = true }

[dev-dependencies]
typst-pdf = { workspace = true }
anyhow = { workspace = true }
oicana_files = { workspace = true, features = ["native"] }

[lints]
workspace = true
